@@ -1,3 +1,12 @@
+2011-04-17  Patrick Gansterer  <paroga@webkit.org>
+
+        Reviewed by Adam Barth.
+
+        Rename PLATFORM(CG) to USE(CG)
+        https://bugs.webkit.org/show_bug.cgi?id=58729
+
+        * wtf/Platform.h:
+
 2011-04-16  Patrick Gansterer  <paroga@webkit.org>
 
         Reviewed by Eric Seidel.
